@@ -1,5 +1,6 @@
 2.20 - ?
 	- Order the VNs listed on char browser by release date
+	- Order the traits groups on /i by their 'order' column
 	- Bugfix: don't accidentally remove char traits when editing
 	- Bugfix: fixed possible SQL table name clash on history browser
 	- Bugfix: properly announce chars and traits in Multi::IRC
